fix spacing issue

--- a/packages/front-end/src/components/PooledPokemon.css
+++ b/packages/front-end/src/components/PooledPokemon.css
@@ -2,7 +2,6 @@
   height: 100%;
   width: 100%;
   background-color: slategrey;
-  padding: 8px;
 }
 
 .pooledPokemon-heading {
