--- a/packages/front-end/src/index.css
+++ b/packages/front-end/src/index.css
@@ -5,6 +5,7 @@ body, html {
 }
 
 #root {
-  height: 100vh;
-  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
